hopefully a fix for github list-style being visible

--- a/_harp/main.less
+++ b/_harp/main.less
@@ -18,10 +18,12 @@ body{
   padding: 0;
   margin: 10px;
   display: inline-block;
+  list-style-type: none;
 }
 
 .nav li {
   list-style: none;
+  list-style-type: none;
   display: inline-block;
   padding: 10px;
 }
@@ -107,6 +109,7 @@ body{
 .article-list {
   padding: 0;
   margin: 0;
+  list-style-type: none;
   min-height: 600px;
 }
 
@@ -115,6 +118,7 @@ body{
   padding: 5px 30px;
   border-radius: 5px;
   list-style: none;
+  list-style-type: none;
   margin-bottom: 10px;
   margin: 0 auto;
   max-width: 700px;
